Remove Supabase, use standard PostgreSQL + Simple JWT auth
- Replaced Supabase auth with simple JWT middleware
- Updated config to use JWT_SECRET instead of Supabase keys
- Updated auth handler for login/register with password hashing
- Updated README to reflect PostgreSQL-only setup
- Removed all Supabase dependencies from code

--- a/apps/api/.env.example
+++ b/apps/api/.env.example
@@ -2,24 +2,28 @@
 PORT=8080
 ENV=development
 
-# Supabase
-SUPABASE_URL=https://your-project.supabase.co
-SUPABASE_ANON_KEY=eyJ...
-SUPABASE_SERVICE_ROLE_KEY=eyJ...
-DATABASE_URL=postgresql://postgres:password@localhost:54322/postgres
+# Database - Standard PostgreSQL
+# Examples:
+# Local: postgresql://user:pass@localhost:5432/ner_studio
+# Neon:  postgresql://user:pass@ep-xxx.us-east-1.aws.neon.tech/dbname
+# Railway: postgresql://user:pass@containers-xx.railway.app:5432/railway
+DATABASE_URL=postgresql://user:password@localhost:5432/ner_studio
+
+# JWT Secret - Generate with: openssl rand -base64 32
+JWT_SECRET=your-jwt-secret-key-here
 
 # AI Provider API Keys
-KIE_AI_API_KEY=...
-OPENAI_API_KEY=sk-...
-GEMINI_API_KEY=...
+KIE_AI_API_KEY=your-kie-ai-api-key
+OPENAI_API_KEY=sk-your-openai-key
+GEMINI_API_KEY=your-gemini-api-key
 
-# Cloudflare R2
-R2_ACCOUNT_ID=...
-R2_ACCESS_KEY_ID=...
-R2_SECRET_ACCESS_KEY=...
+# Cloudflare R2 Storage
+R2_ACCOUNT_ID=your-account-id
+R2_ACCESS_KEY_ID=your-access-key
+R2_SECRET_ACCESS_KEY=your-secret-key
 R2_BUCKET_NAME=ner-storage
-R2_PUBLIC_URL=https://your-bucket.tansil.pro
+R2_PUBLIC_URL=https://your-bucket.public.url
 
 # App
 CALLBACK_BASE_URL=http://localhost:8080
-PROVIDER_KEY_ENCRYPTION_SECRET=your-32-byte-encryption-key-here
+PROVIDER_KEY_ENCRYPTION_SECRET=your-encryption-secret
